k8s/slurm/slurm-project-fileshare/kube/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fileshare
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: fileshare
  type: ClusterIP
