k8s/slurm/slurm-project-fileshare/kube/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
    - host: k8s.test.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: fileshare
              port:
                number: 80
